# kotak

./: .gitignore  Cargo.toml  docker-compose.yml
crates/kotak-agent/: Cargo.toml
crates/kotak-agent/src/: api.rs  cmd.rs  exec.rs  filesystem.rs  firecracker.rs  gc.rs  lib.rs  main.rs  network.rs  sandbox.rs  snapshot.rs  vsock.rs
crates/kotak-agent/src/firecracker/: client.rs  mod.rs  process.rs
crates/kotak-common/: Cargo.toml
crates/kotak-guest/: Cargo.toml
crates/kotak-guest/src/: handlers.rs  lib.rs  main.rs  util.rs
rootfs/: build.sh
