[package]
name = "kotak-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
