[package]
name = "kotak-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.15"
aws-credential-types = "1.2.14"
aws-sdk-s3 = {version="1.129.0", features = ["behavior-version-latest"]}
axum = "0.8.8"
futures-util = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = {version="1.23.0", features=["v4"]}
