[package]
name = "kotak-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tokio-vsock = "0.7.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
opt-level = "z"
strip = true
